# bingo

./: .gitignore  Cargo.toml  Dioxus.toml
api/: Cargo.toml
api/src/: bingo.rs  lib.rs
assets/: bingo-3e85310d709dd9d3.js.br  bingo-81f3d37de0da746a.js  bingo_bg-b15a1bc7418c8484.wasm  bingo_bg-b15a1bc7418c8484.wasm.br
docs/: 404.html  index.html
docs/assets/: bingo-3e85310d709dd9d3.js  bingo-81f3d37de0da746a.js.br  bingo_bg-80a039836143c896.wasm  bingo_bg-80a039836143c896.wasm.br  bingo_bg-fc27b58b44aae61c.wasm  bingo_bg-fc27b58b44aae61c.wasm.br  main-e5d969c07e51978c.css  main-e5d969c07e51978c.css.br
docs/public/: index.html
src/: main.rs
web/: Cargo.toml
web/assets/: bingo-gf-2025.json  main.css
web/src/: main.rs
