[workspace]
resolver = "2"
members = [
    "web",
    "api"
]

[workspace.package]
name = "bingo"
version = "0.1.0"
authors = ["Jerome Colle <jerome@otiv.ai>"]
edition = "2021"

[workspace.dependencies]
dioxus = { version = "0.6.3" }
serde_json = "1.0.141"
anyhow = "1.0.98"
gloo = {version = "0.11.0", features = ["timers", "net"]}
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }

api = {path = "api"}

[web.resource]
# This ensures assets are properly handled
dev = true

[web.app]
base_path = "bingo"
title = "bingo"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
